# clipOCR

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
examples/: ocr_file.rs
src/: cli.rs  errors.rs  lib.rs  main.rs  output.rs
src/clipboard/: linux.rs  macos.rs  mod.rs
src/ocr/: mod.rs  tesseract.rs  vision.rs
tests/: cli.rs
tests/fixtures/: make_hello.swift
